ReplicatedPG::do_update_log_missing: take the pg lock in the callback

Fixes: http://tracker.ceph.com/issues/17789
Signed-off-by: Samuel Just <sjust@redhat.com>
(cherry picked from commit 3ba2e2e21a187474d556722d1ef30c79628f1c50)